pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "app-name-here"
  labels:
    app: "app-name-here"
spec:
  containers:
    - name: appnamehere
      image: "image-app-name-here:latest"
