statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "mysql"
  labels:
    app: "mysql"
spec:
  serviceName: mysql-h
  replicas: 3
  template:
    template:
      metadata:
        labels:
          app: "mysql"
      spec:
        containers:
          - name: mysql
            image: "mysql:latest"
      selector:
        matchLabels:
          app: mysql
