ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "ingress-host"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    ingress.kubernetes.io/force-ssl-redirect: "true" # força o https
spec:
  rules:
  - host: "ingress.fullcycle.com.br"
    http:
      paths:
        - pathType: Prefix
          path: "/admin"
          backend:
            serviceName: appname-service
            servicePort: 80
    tls:
    - "ingress.fullcycle.com.br"
    secretName: letsencrypt-tls
